objects/Deployment__c.object
<CustomObject>
    <description>Created for tracking deployment information per RQ-04584</description>
    <fields>
        <fullName>Completed_Deployment_Date__c</fullName>
        <label>Completed Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Changes__c</fullName>
        <inlineHelpText>Any additions or changes to data, including Custom Settings</inlineHelpText>
        <label>Data Changes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Post_deployment_Steps__c</fullName>
        <description>Steps taken after the deployment is complete (such as any configuration needed to enable the functionality).</description>
        <inlineHelpText>Steps taken after the deployment is complete (such as any configuration needed to enable the functionality).</inlineHelpText>
        <label>Post-deployment Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pre_deployment_Steps__c</fullName>
        <description>Steps taken before the deployment is started (such as loading new Custom Setting data).</description>
        <inlineHelpText>Steps taken before the deployment is started (such as loading new Custom Setting data).</inlineHelpText>
        <label>Pre-deployment Steps</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Release_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User assigned to click the Deploy button.</description>
        <inlineHelpText>The User assigned to click the Deploy button.</inlineHelpText>
        <label>Release Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_Deployment_Date__c</fullName>
        <label>Scheduled Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Deployment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DPLY-{000000}</displayFormat>
        <label>Deployment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>